# third-party-modules

./: .gitignore  CLAUDE.md  DeveloperGuide.md  README.md  cdk.json  cdk_dynamic_stacks.py  pyproject.toml  setup.sh
.github/: SECRETS_REQUIRED.md
.github/workflows/: deploy-production-on-merge.yml  deploy-staging-on-pr.yml
modules_ale/tope/: index.py  registration.json
modules_prod_solutions/claude_prompt/: index.py
modules_prod_solutions/perplexity/: index.py  perplexity_module_registration.json
modules_prod_solutions_test/claude_prompt/: registration.json
modules_prod_solutions_test/perplexity/: index.py  perplexity_module_registration.json
modules_test/test-sum/: frontend_config.json  index.py
